# winrmpc

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs
.claude/skills/release/: SKILL.md
.claude/skills/ship/: SKILL.md
src/: icon.rs  logger.rs  main.rs
src/art/: cache.rs  mod.rs  musicbrainz.rs
src/config/: settings.rs
src/mpd/: client.rs  commands.rs  error.rs  mod.rs  protocol.rs  types.rs
src/ui/: app.rs  message.rs  mod.rs
src/ui/theme/: colors.rs  mod.rs
src/ui/views/: album.rs  albums_list.rs  artist.rs  artists_list.rs  browser.rs  cd.rs  genre_detail.rs  genres_list.rs  library.rs  log.rs  mod.rs  now_playing.rs  outputs.rs  partitions.rs  queue.rs  radio.rs  search.rs
src/ui/widgets/: art_image.rs  mod.rs  player_bar.rs  sidebar.rs
