[package]
name = "winrmpc"
version = "0.1.4"
edition = "2021"
description = "A modern Windows MPD client with album art, partitions, and outputs"
license = "MIT"

[dependencies]
iced = { version = "0.13", features = ["tokio", "image", "svg", "advanced"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
image = { version = "0.25", features = ["jpeg", "png", "webp", "gif"] }
reqwest = { version = "0.12", features = ["json"] }
directories = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
chrono = "0.4"
flume = "0.11"
fuzzy-matcher = "0.3"
open = "5"
urlencoding = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
